deploymentFiles/openwebui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui-deployment
  namespace: openwebui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui-service
  namespace: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - port: 8080
      targetPort: 8080
